unpackaged/main/default/objects/Case/fields/Desired_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Desired_Due_Date__c</fullName>
    <label>Desired Due Date</label>
    <type>Date</type>
</CustomField>