unpackaged/main/default/objects/Case/fields/External_Email_to_Case__c.field-meta.xml
<CustomField>
    <fullName>External_Email_to_Case__c</fullName>
    <label>External Email-to-Case</label>
    <type>Email</type>
</CustomField>