unpackaged/main/default/objects/Case/fields/Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>Hold_Reason__c</fullName>
    <label>Hold Reason</label>
    <type>TextArea</type>
</CustomField>