unpackaged/main/default/objects/Case/recordTypes/Salesforce_Work_Items.recordType-meta.xml
<RecordType>
    <fullName>Salesforce_Work_Items</fullName>
    <active>true</active>
    <businessProcess>Salesforce Work Items</businessProcess>
    <description>Used to request updates, enhancements and fixes in Salesforce.</description>
    <label>Salesforce Work Items</label>
</RecordType>